--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<!-- saved from url=(0022)http://localhost:1234/ -->
-<html lang="en" class="sr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
+<html lang="en" class="sr">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="favicon.12ba245e.png">
@@ -29,9 +30,9 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden" style="visibility: visible;">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Jorn Blaedel</span>
           <br>
-          I'm the Unknown Developer.
+          I'm a newbie developer.
         </h1>
         <p class="hero-cta load-hidden" style="visibility: visible;">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about">Know more</a>
@@ -231,6 +232,6 @@
     <!-- /END Footer Section -->
 
     <script defer="" src="index.379dd93c.js.download"></script>
-  
+
 
 </body></html>
