--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="favicon.12ba245e.png">
+    <link rel="shortcut icon" type="image/png" href="user-graduate-solid.svg">
 
     <!-- Todo: put here your site title -->
     <title>Jorn | Developer</title>
