--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden" style="visibility: visible;">
-          Hi, my name is <span class="text-color-main">Jorn Blaedel</span>
+          Hi, merry christmas
           <br>
-          I'm a newbie developer.
+          from <span class="text-color-main">Jorn Blaedel</span>
         </h1>
         <p class="hero-cta load-hidden" style="visibility: visible;">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about">Know more</a>
@@ -41,7 +41,7 @@
     </section>
     <!-- /END Hero Section -->
 
-    <!-- **** About Section **** -->
+    <!-- **** About Section ****
     <section id="about">
       <div class="container">
         <h2 class="section-title load-hidden" style="visibility: visible;">About me</h2>
@@ -72,13 +72,13 @@
     </section>
     <!-- /END About Section -->
 
-    <!-- **** Projects Section **** -->
+    <!-- **** Projects Section ****
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text" style="visibility: visible;">Projects</h2>
 
-          <!-- Notice: each .row is a project -->
+          <!-- Notice: each .row is a project
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden" style="visibility: visible;">
@@ -112,7 +112,7 @@
           </div>
           <!-- /END Project -->
 
-          <!-- Notice: each .row is a project -->
+          <!-- Notice: each .row is a project
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden" style="visibility: visible;">
@@ -146,7 +146,7 @@
           </div>
           <!-- /END Project -->
 
-          <!-- Notice: each .row is a project -->
+          <!-- Notice: each .row is a project
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden" data-sr-id="10" style="visibility: visible; opacity: 0; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -30, 0, 0, 1);">
@@ -178,13 +178,13 @@
               </div>
             </div>
           </div>
-          <!-- /END Project -->
+          <!-- /END Project
         </div>
       </div>
     </section>
     <!-- /END Projects Section -->
 
-    <!-- **** Contact Section **** -->
+    <!-- **** Contact Section ****
     <section id="contact">
       <div class="container">
         <h2 class="section-title" data-sr-id="3" style="visibility: visible; opacity: 0;">Contact</h2>
@@ -196,7 +196,7 @@
     </section>
     <!-- /END Contact Section -->
 
-    <!-- **** Footer Section **** -->
+    <!-- **** Footer Section ****
     <footer class="footer navbar-static-bottom">
       <div class="container">
         <a rel="noreferrer" href="#top" class="back-to-top">
@@ -216,13 +216,13 @@
 
         <hr>
 
-        <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
+        <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it
         <p class="footer__text">
           © 2021 - Template developed by
           <a rel="noreferrer" href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a>
         </p>
 
-        <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
+        <!-- TO DO: remove this entire paragraph once you finish your portfolio
         <p class="mt-3 pt-3">
           <span></span>
           <span></span>
