For Christmas EDIT

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
           <br>
           from <span class="text-color-main">Jorn Blaedel</span>
         </h1>
-        <p class="hero-cta load-hidden" style="visibility: visible;">
+        <!-- <p class="hero-cta load-hidden" style="visibility: visible;">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about">Know more</a>
         </p>
       </div>
-    </section>
+    </section> -->
     <!-- /END Hero Section -->
 
     <!-- **** About Section ****
