--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           from <span class="text-color-main">Jorn Blaedel</span>
         </h1>
         <p class="hero-cta load-hidden" style="visibility: visible;">
-          <a rel="noreferrer" class="cta-btn cta-btn--hero" href="https://www.facebook.com/GarbsEstSoft">Know more</a>
+          <a rel="noreferrer" class="cta-btn cta-btn--hero" href="https://www.facebook.com/GarbsEstSoft">Facebook</a>
         </p>
       </div>
     </section>
