--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <!-- Todo: read the following HTML Todos to create your stunning portfolio website -->
-  <body style="height: 100%;">
+  <body style="height: 100%; background: url('bg.jpg'); background-size: cover">
     <div id="top"></div>
 
     <!-- **** Hero Section **** -->
