--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="user-graduate-solid.svg">
 
     <!-- Todo: put here your site title -->
-    <title>Jorn | Developer</title>
+    <title>Jorn | Merry Christmas</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill">
     <!-- Todo: improve your SEO by adding a small description of you -->
